feat: add settings management page with shipping options and update functionality

--- a/admin/components/header.html
+++ b/admin/components/header.html
@@ -30,7 +30,8 @@
                     class="hidden absolute left-0 mt-2 w-48 bg-white text-black rounded-lg shadow-lg">
                     <button class="block px-4 w-full py-2 hover:bg-gray-100">الملف
                         الشخصي</button>
-                    <button class="block px-4 w-full py-2 hover:bg-gray-100">الإعدادات</button>
+                    <button onclick="window.open('parametrs.php','_self')"
+                        class="block px-4 w-full py-2 hover:bg-gray-100">الإعدادات</button>
                     <button onclick="logout()" class="block w-full px-4 py-2 hover:bg-gray-100">تسجيل
                         الخروج</button>
                 </div>
