fix: standardize cart link references and improve DataTable handling and fixed products page re-rendering when changing qty

--- a/admin/components/header.html
+++ b/admin/components/header.html
@@ -105,7 +105,7 @@
         <a href="users.php" id="users" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
             <i class="fas fa-user-cog"></i> المستخدمين
         </a>
-        <a href="#settings" id="settings" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+        <a href="parametrs.php" id="settings" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
             <i class="fas fa-cog"></i> إعدادات
         </a>
     </nav>
