--- a/admin/components/header.html
+++ b/admin/components/header.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="bg-gray-800 text-white p-4 fixed top-0 left-0 right-0 z-50">
+<nav class="bg-gray-800 text-white p-4 fixed top-0 left-0 right-0 z-[999]">
     <div class="flex justify-between items-center">
         <!-- Burger Menu for Sidebar (Visible on small screens) -->
         <button id="menu-btn" class="md:hidden text-white">
@@ -42,7 +42,7 @@
 </nav>
 
 <!-- PLUS Dropdown menu -->
-<div class="z-50 md:left-[4rem] hidden  absolute left-1 text-base list-none  divide-y  rounded-lg shadow bg-gray-700 divide-gray-600"
+<div class="z-[999] md:left-[4rem] hidden  absolute left-1 text-base list-none  divide-y  rounded-lg shadow bg-gray-700 divide-gray-600"
     id="plus-dropdown">
 
     <ul class="py-2" aria-labelledby="plus-menu-button">
@@ -84,7 +84,7 @@
 
 <!-- Sidebar -->
 <div id="sidebar"
-    class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
+    class="fixed right-0 w-64 z-[999] h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
     <h2 class="text-center text-xl font-bold mb-4">لوحة التحكم</h2>
     <nav class="space-y-2">
         <a href="dashboard.php" id="dashboard" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
